<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">我享学-老师版</string>
    <string name="session">首页</string>
    <string name="address_book">消息</string>
    <string name="schedule_tab">课表</string>
    <string name="me_tab">我</string>
    <string name="exit">再按一次退出程序！</string>

    <string name="person_username_hint_txt">请输入用户名/手机号码</string>
    <string name="person_username_hint_txt4">请输入手机号码</string>
    <string name="person_password_hint_txt">请输入密码</string>
    <string name="person_password_hint_txt2">请输入6-16位密码</string>
    <string name="person_password_hint_txt3">请确认密码</string>
    <string name="person_register_hint1">请输入用户名</string>
    <string name="person_register_hint2">请输入您的手机号</string>
    <string name="person_register_hint6">请输入新手机号</string>
    <string name="person_register_hint3">请输入手机验证码</string>
    <string name="person_register_hint33">请输入验证码</string>
    <string name="person_register_hint4">请再次输入密码</string>
    <string name="welcome_forget">忘记密码？</string>
    <string name="welcome_register">注册</string>
    <string name="welcome_login">登录</string>
    <string name="loading">加载中</string>
    <string name="passname_empty">用户名或密码不能为空</string>
    <string name="phone_error">不是正确的手机号!</string>
    <string name="error_data">数据加载错误!请检测网络~</string>
    <string name="login_title">登录</string>
    <string name="input_error">填写不全或为空，请重新填写！</string>
    <string name="pass_error2">密码必须是6-16位！</string>
    <string name="pass_errors">两次密码输入不一致</string>
    <string name="has_minuter">%1$s 秒</string>
    <string name="addcode_resend">重新发送</string>
    <string name="addcode_code">获取验证</string>
    <string name="pcenter_forget_pass">忘记密码</string>
    <string name="submit_accertify_title">提示</string>
    <string name="submit_accertify_info">您的信息已提交审核,审核结果会以短信方式通知,请您耐心等待!</string>

    <!-- Refresh -->
    <string name="p2refresh_head_load_more">加载更多</string>
    <string name="p2refresh_end_load_more">更    多</string>
    <string name="p2refresh_end_click_load_more">点击加载</string>
    <string name="p2refresh_release_refresh">松开立即刷新</string>
    <string name="p2refresh_pull_to_refresh">下拉刷新</string>
    <string name="p2refresh_doing_head_refresh">正在刷新&#8230;</string>
    <string name="p2refresh_doing_end_refresh">加载中&#8230;</string>
    <string name="p2refresh_refresh_lasttime">最近更新&#160;&#058;&#160;</string>

    <!-- -->
    <string name="loading_fail_nodata">目前暂无数据</string>
    <string name="loading_text">正在加载,请稍候!</string>
    <string name="loading_fail_server">获取数据失败,请刷新看看~~</string>
    <string name="search_content_hint">请输入内容</string>

    <!-- 搜索 -->
    <string name="hint_search_seller">请输入搜索关键词</string>
    <string name="hint_search_product">请输入搜索关键词</string>
    <string name="no_seller">亲，沒有此老师哦</string>
    <string name="no_product">亲，没有此老师哦</string>
    <string name="clear_search_history">清除搜索记录</string>
    <string name="search_product_hint_text">请输入老师关键字</string>
    <string name="search">搜索</string>
    <!-- xlistview-->
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="xlistview_no_more_data">无更多数据</string>

    <string name="msg">消息</string>
    <string name="ask">咨询</string>
    <string name="seek">关注</string>
    <string name="city">城市</string>
    <string name="jonior">年级</string>
    <string name="choose">筛选</string>
    <string name="sure">确定</string>
    <string name="maping">定位中...</string>
    <string name="price">￥%1$s/2小时</string>
    <string name="balance_has">￥%1$s</string>

    <!-- 个人资料 -->
    <string name="center_user_manage">个人资料</string>
    <string name="center_head_setting">修改头像</string>
    <string name="wallet">钱包</string>
    <string name="order">订单</string>
    <string name="cationg">我的评价</string>
    <string name="feebacek">反馈</string>
    <string name="custom_phone">客服电话</string>
    <string name="settting">设置</string>

    <string name="center_info_weixinhao">公众号</string>
    <string name="center_info_sex">性别</string>
    <string name="center_submit">提交资料</string>
    <string name="center_address_management">地址管理</string>
    <string name="center_edit_password">修改密码</string>
    <string name="center_textsize">阅读字体</string>
    <string name="center_seeia_user">巧遇专家</string>
    <string name="center_seeia_ia">反馈</string>
    <string name="ia_detail_info">详细资料</string>
    <string name="schedule">&#032;&#032;%1$s&#032;&#032;</string>
    <string name="hasPay">已完成</string>
    <string name="balance">余额</string>
    <string name="recharge">充值</string>
    <string name="widthdraw">提现</string>
    <string name="withdraw_price">请输入充值金额</string>
    <string name="detail">明细</string>
    <string name="order_detail">我的订单</string>
    <string name="feed_back_content">建议反馈</string>
    <string name="change_pass">修改密码</string>
    <string name="servic_protocol">服务协议</string>
    <string name="about_me">关于我们</string>
    <string name="sys_msg">系统消息</string>
    <string name="reset_pass">修改密码</string>
    <string name="purchase">购买课程</string>
   <!-- <string name="confirm">确定</string>
    <string name="giveup">取消</string>-->
    <string name="giveup2">删除</string>
    <string name="upload_fail">图片上传失败</string>
    <string name="upload_success">图片上传成功</string>
    <string name="agree_protocol"><u>此软件的用户协议</u></string>
    <string name="contact_tea">联系老师</string>
    <string name="pay_now">立即支付</string>
    <string name="feed_money">申请退款</string>
    <string name="assert_now">立即评价</string>
    <string name="sure_finish">确认完成</string>
    <string name="course_setting">课程设置</string>
    <string name="id_certify">身份认证</string>
    <string name="school_certify">学历认证</string>
    <string name="certify_seeting">认证设置</string>
    <string name="submit">提交</string>

    <string name="action_settings">Settings</string>
    <string name="confirm">确&#160;&#160;定</string>
    <string name="giveup">放&#160;&#160;弃</string>
    <string name="double_back_exit_ap">再按一次退出程序</string>

    <!-- 版本更新 -->
    <string name="update_notes">更新说明:</string>
    <string name="sdcardnotexits">SD卡不存在</string>
    <string name="update_if_cancel">是否取消升级？</string>
    <string name="down_if_cancel">是否取消下载？</string>
    <string name="update_failed">升级失败！</string>
    <string name="down_failed">下载失败！</string>
    <string name="down_success">下载成功！</string>
    <string name="update">更新提示</string>
    <string name="down">下载提示</string>




    <!--年级star-->
    <string-array name="jonior_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <!--<item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>-->
    </string-array>
    <string-array name="jonior">
        <item>小学</item>
        <item>初中</item>
        <item>高中</item>
       <!-- <item>四年级</item>
        <item>五年级</item>
        <item>六年级</item>
        <item>初一</item>
        <item>初二</item>
        <item>初三</item>
        <item>高一</item>
        <item>高二</item>
        <item>高三</item>-->
    </string-array>
    <!--年级end-->

    <!--课程 star-->
    <string-array name="course_id">
        <item>101</item>
        <item>102</item>
        <item>103</item>
        <item>104</item>
        <item>105</item>
        <item>106</item>
        <item>107</item>
        <item>108</item>
        <item>109</item>
    </string-array>
    <string-array name="course">
        <item>语文</item>
        <item>数学</item>
        <item>英语</item>
        <item>物理</item>
        <item>化学</item>
        <item>生物</item>
        <item>政治</item>
        <item>历史</item>
        <item>地理</item>
    </string-array>
    <!--课程 end-->

    <!--学历 star-->
    <string-array name="degree_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="degree">
        <item>本科</item>
        <item>研究生</item>
        <item>博士</item>
    </string-array>
    <!--学历 star-->

    <!--星期频次 star-->
    <string-array name="frequency_id">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="frequency">
        <item>周一</item>
        <item>周二</item>
        <item>周三</item>
        <item>周四</item>
        <item>周五</item>
        <item>周六</item>
        <item>周日</item>
    </string-array>
    <!--星期频次 star-->


</resources>
