<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/container"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#eee"
              android:orientation="vertical"
        >

    <include layout="@layout/fragment_header"
            />
    <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/line"
            android:background="@color/color_small_gray"
            android:layout_marginTop="38dp"
            />
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            >
        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                >
            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_login_user"
                    android:layout_gravity="center_vertical"
                    />

            <EditText
                    android:id="@+id/login_username"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:hint="@string/person_username_hint_txt"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_small_gray"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
<!--            android:text="18456593220"-->

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:layout_marginLeft="45dp"
                android:background="@color/color_small_gray"
                android:layout_marginTop="6dp"
                />

        <LinearLayout
                android:layout_marginTop="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:orientation="horizontal"
                android:layout_marginLeft="8dp"
                >
            <ImageView
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:src="@drawable/ic_login_password"
                    android:layout_gravity="center_vertical"
                    android:scaleType="fitXY"
                    />
            <EditText
                    android:id="@+id/login_pass"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/person_password_hint_txt"
                    android:gravity="center_vertical"
                    android:textColor="@color/color_small_gray"
                    android:inputType="textPassword"
                    android:background="@android:color/transparent"
                    android:maxLines="1"
                    android:singleLine="true"
                    />
           <!-- android:text="111111"-->

        </LinearLayout>

        <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/line"
                android:background="@color/color_small_gray"
                android:layout_marginTop="6dp"
        />

    </LinearLayout>

    <TextView
            android:layout_marginTop="12dp"
            android:id="@+id/forget_pass_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_forget"
            android:background="@drawable/listview_item_click_select3"
            android:layout_gravity="right"
            android:padding="8dp"
            android:textSize="@dimen/app_text_size_first"
            android:textColor="@color/color_gray"
            android:layout_marginRight="8dp"
            />

    <TextView
            android:layout_marginTop="28dp"
            android:id="@+id/login_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_login"
            android:background="@drawable/login_selector2"
            android:textSize="@dimen/app_text_size_most"
            android:textColor="@android:color/white"
            android:padding="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            />

    <TextView
            android:id="@+id/register_text"
            android:layout_marginTop="13dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_register"
            android:background="@drawable/register_selector"
            android:textSize="@dimen/app_text_size_most"
            android:textColor="@color/login_normal"
            android:padding="12dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center_horizontal"
            />

</LinearLayout>