<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:id="@+id/mainLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">


    <LinearLayout
            android:id="@+id/main_bottom"
            android:layout_width="match_parent"
            android:layout_height="51dp"
            android:layout_alignParentBottom="true"
            android:gravity="center_vertical"
            android:background="@color/white"
            android:orientation="horizontal">

        <RelativeLayout
                android:id="@+id/btn_container_conversation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1" >
               <!-- android:background="@drawable/main_bottom_item_bg"-->
            <Button
                    android:id="@+id/btn_conversation"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_chat_bg"
                    android:paddingBottom="@dimen/maint_bottom_marginbot"
                    android:scaleType="matrix"
                    android:text="@string/session"
                    android:textColor="@color/main_botton_text_color"
                    android:background="@null"
                    android:textSize="@dimen/maint_bottom_txt_size" />

            <TextView
                    android:id="@+id/unread_msg_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/maint_bottom_txt_size"
                    android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/btn_container_address_list"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1" >

            <Button
                    android:id="@+id/btn_address_list"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_contact_list_bg"
                    android:paddingBottom="@dimen/maint_bottom_marginbot"
                    android:scaleType="matrix"
                    android:text="@string/address_book"
                    android:textColor="@color/main_botton_text_color"
                    android:background="@null"
                    android:textSize="@dimen/maint_bottom_txt_size" />

            <TextView
                    android:id="@+id/unread_address_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="7"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/maint_bottom_txt_size"
                    android:visibility="invisible" />
        </RelativeLayout>

        <RelativeLayout
                android:id="@+id/btn_container_setting"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1" >

            <Button
                    android:id="@+id/btn_setting"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_setting_bg"
                    android:paddingBottom="@dimen/maint_bottom_marginbot"
                    android:scaleType="matrix"
                    android:text="@string/schedule_tab"
                    android:textColor="@color/main_botton_text_color"
                    android:background="@null"

                    android:textSize="@dimen/maint_bottom_txt_size" />
        </RelativeLayout>
        <RelativeLayout
                android:id="@+id/btn_container_center"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginTop="3dp"
                android:layout_weight="1" >

            <Button
                    android:id="@+id/btn_center"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:drawableTop="@drawable/tab_center_bg"
                    android:paddingBottom="@dimen/maint_bottom_marginbot"
                    android:scaleType="matrix"
                    android:text="@string/me_tab"
                    android:textColor="@color/main_botton_text_color"
                    android:background="@null"
                    android:textSize="@dimen/maint_bottom_txt_size" />
        </RelativeLayout>
    </LinearLayout>
    <View android:layout_width="match_parent"
          android:layout_height="0.5dp"
          android:layout_above="@+id/main_bottom"
          android:id="@+id/line"
          android:background="@color/home_line"/>
    <RelativeLayout
            android:id="@+id/fragment_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:layout_above="@id/line" />

</RelativeLayout>